# launch_break

./: .gitignore  AGENTS.md  LICENSE  README.md
app/: __init__.py  __main__.py  container.py
entities/: menu_sheet.py
features/data_ingestion/: __init__.py  (+1 more)
launch_model_prediction/: ARCHITECTURE.md  README.md  pyproject.toml
launch_model_prediction/app/: __init__.py  __main__.py  actions.py  cli.py  config.py  tui_app.py
launch_model_prediction/data/json/: 01.03.2024.json  01.11.2024.json  02.02.2024.json  02.05.2025.json  03.05.2024.json  05.09.2025.json  05.12.2025.json  06.03.2026.json  06.06.2025.json  06.09.2024.json  06.12.2024.json  07.03.2025.json  07.06.2024.json  07.11.2025.json  08.03.2024.json  08.11.2024.json  09.01.2026.json  09.05.2025.json  1.1.2026.json  10.01.2025.json  10.05.2024.json  12.01.2024.json  12.09.2025.json  12.11.2025.json  12.12.2025.json  13.02.2026.json  13.03.2026.json  13.06.2025.json  13.12.2024.json  14.02.2025.json  14.03.2025.json  14.06.2024.json  15.03.2024.json  15.11.2024.json  16.01.2026.json  16.02.2024.json  16.05.2025.json  16.08.2024.json  17.01.2025.json  17.05.2024.json  (+70 more)
launch_model_prediction/entities/: __init__.py
launch_model_prediction/features/data_ingestion/: engineer.py  repository.py
launch_model_prediction/features/ocr_parser/: __init__.py  ollama_client.py
launch_model_prediction/features/prediction/: __init__.py  evaluator.py  trainer.py
launch_model_prediction/shared/: __init__.py  constants.py  exceptions.py  utils.py
scripts/: generate_synthetic.py
shared/: logger.py  utils.py
(+3 files in other folders)
