[project]
name = "lunch-prediction"
version = "0.1.0"
description = "Lunch Attendance Prediction System with OCR and ML"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "holidays>=0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "entities", "features", "shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
